# Stack

./: .gitignore  ADVANCED_NODE_GRAPH_COMPOSITOR_GUIDE.md  BUILDING.md  CMakeLists.txt  Composite_Web_Parity_Implementation_Guide.md  Dear ImGui Desktop UI Reference.md  Glass_Sphere_Artifact_Audit.md  Glass_Sphere_Isolation_Test_Followup.md  Glass_Sphere_Realism_Diagnostic_Plan.md  LICENSE  NODE_GRAPH_INTERACTION_GUIDE.md  README.md  Render_Tab_Foundation_Progress.md  THIRD_PARTY_NOTICES.md  UNIFIED_WORKSPACE_ARCHITECTURE.md  build.bat  build.cmd  cursor_composite_tab_implementation_gui.md  dev-shell.cmd  stack-tools.cmd
AGENT RULES/: 01-decision-rules.txt  02-organization.txt  03-performance-runtime.txt  04-ui-data-assets.txt  05-build-docs-verification.txt  06-forbidden-patterns.txt  07-update-guide.txt  08-debugging-watchlist.txt  program-preset.txt
OLD/: AI_CONTEXT.md  CurrentFixesUpdatesIdeas.md  DEV_LOG.md  README.md  RENDER_HANDOFF_STATUS.md  fixing invisible objects in path trace mode.md
OLD/Codex  and Research Plans Archive/: Building a GPU Path Tracing Render Engine with OpenGL and Dear ImGui.md  Companion Implementation Plan for the Render Tab.md  Worker-Backed Responsiveness Pass, #1.md
OLD/Codex  and Research Plans Archive/Renderer Codex Plans/: Next Step Render Phase 2 Skeleton And Compute Viewport.md  Phase 1 Render Tab Foundation And Panel Lifecycle by CODEX.md
OLD/RenderTab_Archive/: PanelRegistry.cpp  PanelRegistry.h  RenderTab.cpp  RenderTab.h  RenderTabState.cpp  RenderTabState.h
Redefining Rendering/: Anti-Goals & Constraints Specification.md  Compute Shader & Spectral Memory Layout Specification.md  MAIN FILE.txt  Main technical companion.md  Viewport, State, and Pipeline Specification.md
Stack-Rebuild-Docs/: 00_Master_Build.md
Stack-Rebuild-Docs/3D/: 01_3D_Info.md
Stack-Rebuild-Docs/AppShell/: 01_App_Shell_Features.md
Stack-Rebuild-Docs/Composite/: 01_Composite_Info.md
Stack-Rebuild-Docs/Editor/: 01_Editor_Info.md  02_BgPatcher_Layer.md  03_TextOverlay_Layer.md  04_Shader_Registry.md
Stack-Rebuild-Docs/Settings_and_Logs/: 01_Settings_and_Logs_Info.md
cmake/: StackSources.cmake  StackVersion.cmake
docs/: INSTALLER_UPDATER_RELEASES.md  LOCAL_TONE_MAPPING_PLAN.md  NEURAL_DENOISE_SYSTEM_PLAN.md  RAW_ARW_PIPELINE_PLAN.md  RAW_DNG_SUPPORT_PLAN.md  RAW_LIBRAW_PRODUCTION_AUDIT.md  RAW_NODE_TECHNICAL_NOTES.md  RESTORMER_EXPORT_WORKFLOW.md  RESTORMER_ONNX_INTEGRATION.md
docs/auto-raw-base/: README.md  deep-research-report.md  implementation-crosswalk.md  pass-01-analysis-foundation.md  pass-02-auto-base-view-transform.md  pass-03-exposure-wb-highlight-recommendations.md  pass-04-local-range-suggestions-and-color.md  pass-05-noise-detail-validation.md
docs/engineering/: NODE_LIBRARY_MARKER_AUDIT.md  WINDOW_CHROME_POSTMORTEM.md
docs/engineering/mfsr/: MFSR_STATUS.md  (+7 more)
docs/raw-tab-ui-overhaul/: README.md  current-ui-map.md  human-workflow-notes.md  implementation-contract.md  implementation-passes.md  interaction-ideas.md  missed-angles-audit.md  open-questions.md  pass-11-validation-notes.md  side-panel-redesign-spec.md  ui-validation-checklist.md
installer/: StackInstalledBuild.marker  StackInstaller.iss
src/: main.cpp  resources.rc  resources.rc.in
src/App/: AppPaths.cpp  AppPaths.h  AppSettingsPopup.cpp  AppSettingsPopup.h  AppShell.cpp  AppShell.h  AppVersion.h.in  AppWindowTitleBarBridge.cpp  AppWindowTitleBarBridge.h  IAppModule.h  PlatformHelpers.cpp  PlatformHelpers.h  SettingsModule.cpp  SettingsModule.h  StyleModule.cpp  StyleModule.h  UpdateManager.cpp  UpdateManager.h
src/Async/: TaskState.h  TaskSystem.cpp  TaskSystem.h
src/Bundler/: BundlerBuild.cpp  BundlerBuild.h  BundlerGraph.cpp  BundlerGraph.h  BundlerInliner.cpp  BundlerInliner.h  BundlerJobQueue.cpp  BundlerJobQueue.h  BundlerModule.cpp  BundlerModule.h  BundlerRefExtractor.cpp  BundlerRefExtractor.h  BundlerScanner.cpp  BundlerScanner.h  BundlerToolAdapter.cpp  BundlerToolAdapter.h
src/Color/: LutCreator.cpp  LutCreator.h  LutData.h  LutImporter.cpp  LutImporter.h
src/Composite/: CompositeModule.cpp  CompositeModule.h  EmbeddedCompositeFont.h
src/Develop/: DevelopTypes.h
src/Editor/: EditorModule.cpp  EditorModule.h  EditorModuleTypes.h  EditorRenderWorker.cpp  EditorRenderWorker.h  LayerRegistry.cpp  LayerRegistry.h  LoadedProjectData.h
src/MFSR/: MFSRTypes.cpp  MFSRTypes.h
src/NeuralDenoise/: INeuralDenoiseBackend.h  NeuralDenoiseManager.cpp  NeuralDenoiseManager.h  NeuralDenoiseTypes.cpp  NeuralDenoiseTypes.h  OnnxDenoiseBackend.cpp  OnnxDenoiseBackend.h
src/Persistence/: StackBinaryFormat.cpp  StackBinaryFormat.h
src/Presets/: PresetManager.cpp  PresetManager.h
src/Raw/: LibRawDecoder.cpp  LibRawDecoder.h  LibRawRuntime.cpp  LibRawRuntime.h  RawAutoBase.cpp  RawAutoBase.h  RawAutoBaseLocalSuggestions.cpp  RawAutoBaseNoiseDetail.cpp  RawDevelopmentRecipe.cpp  RawDevelopmentRecipe.h  RawGpuPipeline.cpp  RawGpuPipeline.h  RawImageAnalysis.cpp  RawImageAnalysis.h  RawImageData.cpp  RawImageData.h  RawLoader.cpp  RawLoader.h  RawWorkspace.cpp  RawWorkspace.h  RawWorkspaceManagedGraph.cpp  RawWorkspaceManagedGraph.h  RawWorkspaceProjects.cpp
src/RenderTab/: RenderTab.cpp  RenderTab.h
src/Renderer/: FullscreenQuad.cpp  FullscreenQuad.h  GLHelpers.cpp  GLHelpers.h  GLLoader.cpp  GLLoader.h  MaskRenderTypes.h  RawPreviewProxy.cpp  RawPreviewProxy.h  RenderPipeline.cpp  RenderPipeline.h  RenderTiling.cpp  RenderTiling.h
src/Tools/: ToolsModule.cpp  ToolsModule.h
src/Utils/: Base64.h  FileDialogs.cpp  FileDialogs.h  HashUtils.h  ImGuiExtras.cpp  ImGuiExtras.h  NativeWindowTheme.h  SharedPixelBuffer.h  UiNotifications.h
test-assets/raw-auto-base/: manifest.example.json
tools/: bake_fonts.py  bake_shaders.py  bake_splash.py  bake_tab_icons.py  build_release.ps1  build_stack.ps1  create_release.ps1  graph_behavior_tests.cpp  invoke_fixed_command.ps1  package_release.ps1  stack_menu.ps1  stack_workflow.ps1  use_fixed_env.ps1
website/: index.html  index2.html
website/beta main version/: index2.html
website/other versions/: index3.html
(+444 files in other folders)
